Allow reading secret for saxon license 3

--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -26,7 +26,7 @@ jobs:
         fetch-depth: '0'
 
     - name: Copy saxon license to the license file
-      run: 'echo "$VAULT_FGDC2ISO_SAXON_LICENSE" > saxon-license.lic
+      run: 'echo "$VAULT_FGDC2ISO_SAXON_LICENSE" > saxon-license.lic'
       env: VAULT_FGDC2ISO_SAXON_LICENSE: ${{ secrets.VAULT_FGDC2ISO_SAXON_LICENSE }}
 
     - name: Build and run tests
