--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -35,7 +35,7 @@ jobs:
 
     - name: Bump version and push tag
       id: bump
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      if: github.ref == 'refs/heads/test-release' && github.event_name == 'push'
       uses: anothrNick/github-tag-action@1.26.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
