--- a/vars.staging.yml
+++ b/vars.staging.yml
@@ -7,3 +7,6 @@ app_name: fgdc2iso
 
 # Number of application instances to run in cloud.gov
 instances: 1
+
+routes:
+  - route: fgdc2iso-stage.apps.internal
