--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,4 @@ services:
     volumes:
       - ./saxon-license.lic:/etc/saxon-license.lic
     environment:
-      SAXON_LICENSE_FILE: /etc/saxon-license.lic
+      - SAXON_LICENSE_FILE=/etc/saxon-license.lic
