--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -44,6 +44,8 @@ jobs:
     needs: test
 
     steps:
+      - name: checkout
+        uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
         with:
           name: war-file
