--- a/manifest.yml
+++ b/manifest.yml
@@ -2,7 +2,7 @@
 applications:
 - name: ((app_name))
   services:
-    - ((app_name))-secrets # cf cups ${app_name}-secrets -p <(jq -c --null-input --rawfile secret saxon-licence.lic.txt '{SAXON_LICENSE: $secret}')
+    - ((app_name))-secrets
   buildpacks:
     - java_buildpack
   memory: 0.75G
