--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,19 +2,11 @@
 version: 2
 jobs:
   build:
-    machine: true
+    docker:
+      - image: circleci/python
     steps:
-      - checkout
       - run:
-          name: setup saxon license
-          command: |-
-            printf "$SAXONPE_LICENSE" > saxon-license.lic
-      - run: make build
-      - run: make test
-
-
-workflows:
-  version: 2
-  commit:
-    jobs:
-      - build
+          name: N/A
+          command: |
+            echo See GitHub actions for CI.
+            echo ok
