--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -76,7 +76,7 @@ jobs:
       - name: deploy
         uses: usds/cloud-gov-cli@master
         with:
-          command: push fgdc2iso --vars-file vars.development.yml -p build/fgdc2iso.war --strategy rolling
+          command: push fgdc2iso --vars-file vars.staging.yml -p build/fgdc2iso.war --strategy rolling
           org: gsa-datagov
           space: staging
           user: ${{secrets.CF_SERVICE_USER}}
@@ -98,7 +98,7 @@ jobs:
       - name: deploy
         uses: usds/cloud-gov-cli@master
         with:
-          command: push fgdc2iso --vars-file vars.development.yml -p build/fgdc2iso.war --strategy rolling
+          command: push fgdc2iso --vars-file vars.production.yml -p build/fgdc2iso.war --strategy rolling
           org: gsa-datagov
           space: prod
           user: ${{secrets.CF_SERVICE_USER}}
