--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -117,6 +117,10 @@ jobs:
 
     # Checkout the repository to the GitHub Actions runner
     steps:
+    - uses: actions/checkout@v2
+      with: 
+        fetch-depth: '0'
+
     - uses: actions/download-artifact@v2
       with:
         name: war-file
