--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -105,7 +105,7 @@ jobs:
           password: ${{secrets.CF_SERVICE_AUTH}}
   
   publish-war:
-    if: github.ref == 'refs/heads/feature/simplify-circle-ci'
+    if: github.ref == 'refs/heads/main'
     name: 'Publish War File'
     runs-on: ubuntu-latest
     needs: test
