--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -84,7 +84,7 @@ jobs:
   deploy-production:
     if: github.ref == 'refs/heads/main'
     name: deploy (production)
-    environment: development
+    environment: production
     runs-on: ubuntu-latest
     needs: deploy-staging
 
