Docker image changes
Docker images have changed. Need to pin java image to use tomcat 9
and need to update command for bats image.
Tests working locally.

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -5,4 +5,4 @@ RUN apk add curl
 COPY ./ /test/
 
 # entrypoint is bats, supply args as CMD to bats
-CMD ["-r", "/test"]
+CMD ["-r", "/test/ping.bats"]
